--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.37.1",
+    "@astrojs/starlight-docsearch": "^0.6.1",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "starlight-scroll-to-top": "^0.4.0",
+    "starlight-showcases": "^0.3.1",
+    "starlight-sidebar-topics": "^0.6.2"
   }
 }
